# smoke

./: .gitmodules  CMakeLists.txt  README.md
boost/: CMakeLists.txt  patch.cmake  win32_post_install.cmake
botan/: CMakeLists.txt  msys_makefile_patch.cmake  patch.cmake  win32_post_install.cmake
bunsan/: CMakeLists.txt
cppcms/: CMakeLists.txt
grpc/: CMakeLists.txt  install.cmake  patch.cmake  win32_post_install.cmake
msys/: CMakeLists.txt  run.sh
openssl/: CMakeLists.txt
pcre/: CMakeLists.txt
pika/: CMakeLists.txt
protobuf/: CMakeLists.txt  msys_run.sh
python/: CMakeLists.txt
turtle/: CMakeLists.txt
zlib/: CMakeLists.txt
